--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Say hello"
+          name: "hello chou"
           command: "echo Hello, World!"
 
 # Invoke jobs via workflows
@@ -23,4 +23,4 @@ jobs:
 workflows:
   say-hello-workflow:
     jobs:
-      - echo-hello
+      - hello-chou
