--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,26 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "hello chou"
+          name: "Say hello"
           command: "echo Hello, World!"
+
+say-hello-chou:
+  # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+  # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  docker:
+    - image: cimg/base:stable
+  # Add steps to the job
+  # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  steps:
+    - checkout
+    - run:
+        name: "Say hello choucou"
+        command: "echo kamhahahahahahhahahahaaaaaaaaaaaaaa"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
-      - hello-chou
+      - say-hello
+      - say-hello-chou
