--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,10 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-    - checkout
-    - run:
-        name: "Say hello choucou"
-        command: "echo kamhahahahahahhahahahaaaaaaaaaaaaaa"
+      - checkout
+      - run:
+          name: "Say hello choucou"
+          command: "echo kamhahahahahahhahahahaaaaaaaaaaaaaa"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -38,3 +38,5 @@ workflows:
     jobs:
       - say-hello
       - say-hello-chou
+      branches:
+        only: /feature-.*/
