--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,5 +38,6 @@ workflows:
     jobs:
       - say-hello
       - say-hello-chou
-      branches:
-        only: /feature-.*/
+        filters:
+            branches:
+                only: /feature-.*/
