--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,14 +16,14 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: "echo Hello, World!"
+          command: "echo "+$mdp_github
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
-      - say-hello:
-          filters:
-            branches:
-              only: /^feature-.*/
+      - say-hello
+#          filters:
+#            branches:
+#              only: /^feature-.*/
